fix overflow in proposal description

--- a/app/assets/stylesheets/discussions.scss
+++ b/app/assets/stylesheets/discussions.scss
@@ -233,6 +233,7 @@ p > a, .comment > a {
   padding: 6px 10px;
   border: 1px solid #d8d8d8;
   background: white;
+  overflow: hidden;
 }
 
 #top-liked-mini {
